--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Välkommen till Svealund</h1>
+    <h1>Help me choose...</h1>
     <div class="inputSection">
       <div class="inputs">
         <input placeholder="Something"></input>
@@ -14,7 +14,7 @@
       <button class="addOption">Add</button>
     </div>
     <div class="resultSection"></div>
-    <button>Go</button>
+    <button class="submit">Go!</button>
     <img src="Svealund1.jpg" alt="Svealund" width="403" heiht="302"></img>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -25,8 +25,20 @@
       var add_option = function() {
         $('.inputs').append('<input></input>')
       }
-
       $('.addOption').click(add_option)
+
+      var options = []
+      var submit = function() {
+        $('.inputSection').hide()
+        $('.resultSection').css('display', 'flex')
+        $('input').each(function() {
+          options.push($(this).val())
+        })
+        var winner = options[Math.floor(Math.random() * options.length)]
+        console.log(winner)
+        $('.resultSection').text(winner)
+      }
+      $('.submit').click(submit)
     })
     </script>
   </body>
